# ucite_pro_skill_dvc_pipeline

./: .gitignore  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
data/manifests/: clean.jsonl  noisy_snr_-5.0.jsonl  noisy_snr_0.0.jsonl  noisy_snr_10.0.jsonl  noisy_snr_20.0.jsonl  noisy_snr_5.0.jsonl
data/metrics/: metrics_snr_-5.0.jsonl  metrics_snr_0.0.jsonl  metrics_snr_10.0.jsonl  metrics_snr_20.0.jsonl  metrics_snr_5.0.jsonl
data/predictions/: pred_snr_-5.0.jsonl  pred_snr_0.0.jsonl  pred_snr_10.0.jsonl  pred_snr_20.0.jsonl  pred_snr_5.0.jsonl
entrypoints/: add_noise_step.py  evaluate_step.py  plot_step.py  prepare_manifest.py  transcribe_step.py
pipeline/app/: evaluate.py  generate_manifests.py  plot_results.py  process_noise.py  transcribe.py
pipeline/domain/: audio.py  entity.py  metric.py
pipeline/infra/: espeak.py  huggingface.py  manifest_io.py  sound_io.py
scripts/: prepare_sps_manifest.py
tests/: test_domain.py  test_infra.py
