[project]
name = "ucite-pro-skill-dvc-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.65.0",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pathspec==0.10.3",
    "phonemizer>=3.3.0",
    "protobuf>=7.34.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "types-seaborn>=0.13.2.20251221",
]

[[tool.mypy.overrides]]
module = ["phonemizer.*", "soundfile.*"]
ignore_missing_imports = true